Setting HealthCheck, PreAuthorize, Swagger, CORS